Create an Inactive dev branches section, remove branches without information.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -150,7 +150,7 @@ particular releases or snapshots or the latest snapshot.  </p>
   <li>egcs_ss_<i>yyyymmdd</i>	For snapshots prior to 19990913</li>
 </ul>
 
-<h3><a name="devbranches">Development Branches</a></h3>
+<h3><a name="devbranches">Active Development Branches</a></h3>
 
 <dl>
 
@@ -226,52 +226,16 @@ particular releases or snapshots or the latest snapshot.  </p>
   <dd>Part of the work on providing support for compile time
   reflection in C++ is done in this branch.</dd>
 
-  <dt>bnw-simple-branch</dt>
-  <dd></dd>
-
-  <dt>condexec-branch</dt>
-  <dd></dd>
-
-  <dt>cygwin-mingw-v2-branch</dt>
-  <dd></dd>
-
-  <dt>fixincl-branch</dt>
-  <dd></dd>
-
-  <dt>gnu-win32-b20-branch</dt>
-  <dd></dd>
-
-  <dt>itanium-sched-branch</dt>
-  <dd></dd>
-
-  <dt>meissner-ppc-branch</dt>
-  <dd></dd>
-
-  <dt>merged-arm-thumb-backend-branch</dt>
-  <dd></dd>
-
-  <dt>new-abi-branch</dt>
-  <dd></dd>
-
-  <dt>pchgc-branch</dt>
-  <dd></dd>
-
-  <dt>pchmerge-branch</dt>
-  <dd></dd>
-
-  <dt>subreg-byte-branch</dt>
-  <dd></dd>
-
-  <dt>tree-serialize-branch</dt>
-  <dd></dd>
-
-  <dt>x86-64-branch</dt>
-  <dd></dd>
-
   <dt>gcc-3_3-e500-branch</dt>
   <dd>This branch is for backporting the PowerPC/E500 back end to GCC
   3.3.  See <a href="http://gcc.gnu.org/ml/gcc/2003-04/msg00733.html"
   >this message</a> for details.</dd>
+
+</dl>
+
+<h3><a name="olddevbranches">Inactive Development Branches</a></h3>
+
+<dl>
 
   <dt>cp-parser-branch</dt>
   <dd>This branch has been merged into the mainline.</dd>
