Update FreeBSD primary platform.

--- a/htdocs/gcc-3.3/criteria.html
+++ b/htdocs/gcc-3.3/criteria.html
@@ -79,9 +79,9 @@ possible, the release will support other targets as well.</p>
 </tr>
 <tr><td>Intel x86</td><td>Debian GNU/Linux 2.2</td><td>i386-pc-linux-gnu</td><td>&nbsp;</td></tr>
 <tr><td>Intel x86</td><td>RedHat Linux 6.2</td>    <td>i686-pc-linux-gnu</td><td>&nbsp;</td></tr>
-<tr><td>Intel x86</td><td>FreeBSD 4.5</td>
-                      <td>i386-unknown-freebsd4.5</td>
-    <td><a href="mailto:rittle@latour.rsch.comm.mot.com">Loren James Rittle</a></td>
+<tr><td>Intel x86</td><td>FreeBSD -STABLE/-CURRENT</td>
+                      <td>i386-unknown-freebsd</td>
+    <td><a href="mailto:rittle@labs.mot.com">Loren James Rittle</a></td>
 </tr>
 <tr><td>MIPS</td>     <td>IRIX 6.5</td>            <td>mips-sgi-irix6.5</td><td>&nbsp;</td></tr>
 <tr><td>PowerPC</td>  <td>AIX 4.3.3</td>
