--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -48,7 +48,8 @@ to maintain and improve quality.</p>
 <dt><strong>Current release series:</strong>
   <a href="gcc-3.2/">GCC 3.2.2</a> (released 2003-02-05)
 </dt><dd>
-  Open for all maintainers; fixes for regressions only.
+  GCC-3.2.3 will be the latest release from the 3.2.x series.  This
+  branch will be closed after the release.
 </dd>
 
 <!--
