--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -12,7 +12,20 @@ home page</a>.</p>
 
 <dl>
 
-<!-- ATTENTION: This page is for *OLD* news! -->
+<!-- ATTENTION: This page is for *OLD* news!  Latest news goes first. -->
+
+<dt><b>December 4, 2002</b></dt>
+<dd>
+Nathan Sidwell of CodeSourcery has contributed an <a href="http://gcc.gnu.org/ml/gcc-patches/2002-11/msg01858.html">implementation of
+non-trivial covariant returns for non-varadic virtual functions</a>.
+</dd>
+
+<dt><b>November 21, 2002</b></dt>
+<dd>
+<a href="gcc-3.2/">GCC 3.2.1</a> has been released.  We plan to shortly
+create the GCC 3.3 release branch (but want to fix a couple of high-priority
+regressions first).
+</dd>
 
 <dt><b>August 14, 2002</b></dt>
 <dd>
