Add detailed release notes for GCC 3.2.3. By Joe Buck <jbuck@synopsys.com>.

--- a/htdocs/gcc-3.2/changes.html
+++ b/htdocs/gcc-3.2/changes.html
@@ -12,6 +12,9 @@
 
 <h1>GCC 3.2 Release Series<br />Changes, New Features, and Fixes</h1>
 
+<p>The latest release in the 3.2 release series is
+<a href="#3.2.3">GCC 3.2.3</a>.</p>
+
 <h2>Caveats and New Features</h2>
 
 <h3>Caveats</h3>
@@ -88,6 +91,139 @@
   </ul>
 
 <!-- Changes for later point releases should be added at the top. -->
+
+<hr />
+<h2><a name="3.2.3">GCC 3.2.3</a></h2>
+
+<p>3.2.3 is a bug fix release only; there are no new features that
+were not present in GCC 3.2.2.</p>
+
+<h3>Bug Fixes</h3>
+
+<p>This section lists the problem reports (PRs) from GCC's bug tracking
+system (GNATS) that are known to be fixed in the 3.2.2 release. This
+list might not be complete (that is, it is possible that some PRs
+that have been fixed are not listed here).</p>
+
+<p>The sorting is slightly different from the GNATS categories, and some of
+the titles have been changed to make them more clear.</p>
+
+<h4>Internal Compiler Errors (multi-platform)</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=3782">3782</a>: (c++) <code>-quiet -fstats</code> produces a segmentation fault in cc1plus</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=6440">6440</a>: (c++) template specializations cause ICE</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=7050">7050</a>: (c++) ICE on: <code>(i ? get_string() : throw)</code></li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=7741">7741</a>: ICE on conflicting types (<code>make_decl_rtl</code> in <code>varasm.c</code>)</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=7982">7982</a>: (c++) ICE due to infinite recursion (using STL set)</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=8068">8068</a>: exceedingly high (infinite) memory usage</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=8178">8178</a>: ICE with <code>__builtin_ffs</code></li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=8396">8396</a>: ICE in <code>copy_to_mode_reg</code>, in <code>explow.c</code></li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=8674">8674</a>: (c++) ICE in <code>cp_expr_size</code>, in <code>cp/cp-lang.c</code></li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=9768">9768</a>: ICE when optimizing inline code at <code>-O2</code></li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=9798">9798</a>: (c++) Infinite recursion (segfault) in <code>cp/decl.c:push_using_directive</code> with recursive <code>using</code> directives</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=9799">9799</a>: mismatching structure initializer with nested flexible array member: ICE</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=9928">9928</a>: ICE on duplicate <code>enum</code> declaration</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=10114">10114</a>: ICE in <code>mem_loc_descriptor</code>, in <code>dwarf2out.c</code> (affects sparc, alpha)</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=10352">10352</a>: ICE in <code>find_reloads_toplev</code></li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=10336">10336</a>: ICE with <code>-Wunreachable-code</code></li>
+</ul>
+
+<h4>C/optimizer bugs:</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=8224">8224</a>: Incorrect joining of signed and unsigned division</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=8613">8613</a>: <code>-O2</code> produces wrong code with builtin <code>strlen</code> and postincrements</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=8828">8828</a>: gcc reports some code is unreachable when it is not</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=9226">9226</a>: GCSE breaking argument passing</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=9853">9853</a>: miscompilation of non-constant structure initializer</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=9797">9797</a>: C99-style <code>struct</code> initializers are miscompiled</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=9967">9967</a>: Some standard C function calls should not be replaced when optimizing for size</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=10116">10116</a>: ce2: invalid merge of <code>join_bb</code> in the context of <code>switch</code> statements</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=10171">10171</a>: wrong code for inlined function</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=10175">10175</a>: <code>-Wunreachable-code</code> doesn't work for single lines</li>
+</ul>
+
+<h4>C++ compiler and library:</h4>
+
+<ul>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=8316">8316</a>: Confusing diagnostic for code that misuses conversion operators</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=9169">9169</a>: <code>filebuf</code> output fails if <code>codecvt&lt;&gt;::out</code> returns <code>noconv</code></li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=9420">9420</a>: incomplete type incorrectly reported</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=9459">9459</a>: <code>typeof</code> in return type specification of template not supported</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=9507">9507</a>: <code>filebuf::open</code> handles <code>ios_base::ate</code> incorrectly</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=9538">9538</a>: Out-of-bounds memory access in <code>streambuf::sputbackc</code></li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=9602">9602</a>: Total confusion about template/friend/virtual/abstract</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=9993">9993</a>: destructor not called for local object created within and returned from infinite loop</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=10167">10167</a>: <code>ieee_1003.1-2001</code> locale specialisations on a glibc-2.3.2 system</li>
+</ul>
+
+<h4>Java compiler and library:</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=9652">9652</a>: libgcj build fails on irix6.5.1[78]</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=10144">10144</a>: <i>gas</i> on solaris complains about bad <code>.stabs</code> lines for java, native <i>as</i> unaffected </li>
+</ul>
+
+<h4>x86-specific (Intel/AMD):</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=8746">8746</a>: gcc miscompiles Linux kernel ppa driver on x86</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=9888">9888</a>: <code>-mcpu=k6 -Os</code> produces out of range loop instructions</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=9638">9638</a>: Cross-build for target i386-elf and i586-pc-linux-gnu failed</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=9954">9954</a>: Cross-build for target i586-pc-linux-gnu (<code>--with-newlib</code>) failed</li>
+</ul>
+
+<h4>Sparc-specific:</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=7784">7784</a>: [Sparc] ICE in extract_insn, in recog.c</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=7796">7796</a>: sparc extra failure with <code>-m64</code> on execute/930921-1.c in unroll.c</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=8281">8281</a>: ICE when compiling with <code>-O2 -fPIC</code> for Ultrasparc</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=8366">8366</a>: [Sparc] C testsuite failure with <code>-m64</code> -fpic -O in execute/loop-2d.c</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=8726">8726</a>: gcc <code>-O2</code> miscompiles Samba 2.2.7 on 32-bit sparc</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=9414">9414</a>: Scheduling bug on Ultrasparc</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=10067">10067</a>: GCC-3.2.2 outputs invalid asm on sparc64</li>
+</ul>
+
+<h4>m68k-specific:</h4>
+
+<ul>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=7248">7248</a>: broken "inclusive or" code</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=8343">8343</a>: m68k-elf/rtems ICE at instantiate_virtual_regs_1</li>
+</ul>
+
+<h4>PowerPC-specific:</h4>
+
+<ul>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=9732">9732</a>: Wrong code with <code>-O2 -fPIC</code></li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=10073">10073</a>: ICE: powerpc cannot split insn</li>
+</ul>
+
+<h4>Alpha-specific:</h4>
+
+<ul>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=7702">7702</a>: optimization problem on a DEC alpha under OSF1</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=9671">9671</a>: gcc.3.2.2 does not build on a HP Tru64 Unix v5.1B system</li>
+</ul>
+
+<h4>HP-specific:</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=8694">8694</a>: &lt;string&gt; breaks &lt;ctype.h&gt; on HP-UX 10.20 (DUP: 9275)</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=9953">9953</a>: (ada) gcc 3.2.x can't build 3.3-branch ada on HP-UX 10 (missing symbol)</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=10271">10271</a>: Floating point args don't get reloaded across function calls with <code>-O2</code></li>
+</ul>
+
+<h4>MIPS specific:</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=6362">6362</a>: mips-irix6 gcc-3.1 C testsuite failure with <code>-mips4</code> in compile/920501-4.c</li>
+</ul>
+
+<h4>CRIS specific:</h4>
+
+<ul>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=10377">10377</a>: gcc-3.2.2 creates bad assembler code for cris</li>
+</ul>
+
+<h4>Miscellaneous and minor bugs:</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=6955">6955</a>: collect2 says "core dumped" when there is no core</li>
+</ul>
 
 <hr />
 <h2><a name="3.2.2">GCC 3.2.2</a></h2>
