Fix duplicate cfg-branch entry.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -158,10 +158,6 @@ particular releases or snapshots or the latest snapshot.  </p>
   <dd>This branch contains the insn scheduler with an automaton
   based pipeline hazard recognizer.</dd>
 
-  <dt><a href="projects/cfg.html">cfg-branch</a></dt>
-  <dd>The purpose of this branch is to work on improving GCC's
-  infrastructure for RTL based optimizers.</dd>
-
   <dt><a href="projects/ast-optimizer.html">ast-optimizer-branch</a></dt>
   <dd>The purpose of this branch is to work on improving GCC's tree
   based optimizations.</dd>
@@ -212,11 +208,11 @@ particular releases or snapshots or the latest snapshot.  </p>
   graph-coloring register allocator on this branch. It is known to bootstrap 
   under x86-linux and ppc-linux.</dd>
 
-  <dt><a href="projects/cfg.html">cfg-branch</a></dt>
-  <dd>This branch is created to develop and
-  test infrastructure for easier writing of new optimizations.  Some new
-  passes (such as superblock formation, loop peeling, web construction,
-  branch combining etc.) are being implemented there.</dd>
+  <dt><a href="projects/cfg.html">cfg-branch</a></dt> 
+  <dd>This branch is created to develop and test infrastructure for
+  easier writing of new RTL based optimizations.  Some new passes
+  (such as superblock formation, loop peeling, web construction,
+  branch combining etc.)  are being implemented there.</dd>
 
   <dt>rtlopt-branch</dt>
   <dd>This branch is equivalent to the cfg-branch with the exception that it
