* index.html (Upcoming Events): GCC Developers Summit.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -71,12 +71,15 @@ to maintain and improve quality.</p>
 
 <hr />
 
-<!--
 <h2>Upcoming Events</h2>
 
 <dl>
+The <a href="http://www.gccsummit.org/">GCC Developers Summit</a> will
+provide the opportunity for GCC developers and enthusiasts to meet and
+discuss their work, with 20 technical presentations plus working group
+meetings and brainstorming sessions.
+The summit takes place May 25-27, 2003 in Ottawa.
 </dl>
--->
 
 <h2>News/Announcements</h2>
 
