another attempt to fix formatting for announcement of GCC Summit

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -74,11 +74,13 @@ to maintain and improve quality.</p>
 <h2>Upcoming Events</h2>
 
 <dl>
-<p>The <a href="http://www.gccsummit.org/">GCC Developers Summit</a> will
+<dt><a href="http://www.gccsummit.org/">GCC Developers Summit</a></dt>
+<dd>This will
 provide the opportunity for GCC developers and enthusiasts to meet and
 discuss their work, with 20 technical presentations plus working group
 meetings and brainstorming sessions.
-The summit takes place May 25-27, 2003 in Ottawa.</p>
+The summit takes place May 25-27, 2003 in Ottawa.
+</dd>
 </dl>
 
 <h2>News/Announcements</h2>
