* htdocs/testing/testing-boost.html: Spell "version" correctly.

--- a/htdocs/testing/testing-boost.html
+++ b/htdocs/testing/testing-boost.html
@@ -15,7 +15,7 @@ GCC integration testing.</p>
 
 <p>Boost distributions are available from SourceForge, linked from the
 <a href="http://www.boost.org/more/download.html">Boost download page</a>.
-These instructions are for verion 1.27.0, whose gzipped tar file is
+These instructions are for version 1.27.0, whose gzipped tar file is
 3.8 MB.  The uncompressed distribution comprises some 16 MB of source files.
 Building the library and tests adds between 80 and 140 MB of
 object files and executables to this.</p>
