--- a/htdocs/gcc-3.2/index.html
+++ b/htdocs/gcc-3.2/index.html
@@ -8,10 +8,10 @@
 
 <h1>GCC 3.2 Release Series</h1>
 
-<p>February 5, 2003</p>
+<p>April 25, 2003</p>
 
 <p>The <a href="http://www.gnu.org">GNU project</a> and the GCC
-developers are pleased to announce the release of GCC 3.2.2.</p>
+developers are pleased to announce the release of GCC 3.2.3.</p>
 
 <p>The purpose of the GCC 3.2 release series is to provide a stable
 platform for OS distributors to use building their next releases.  A
@@ -28,6 +28,10 @@ caveats, and bug-fixes</a> for further information.</p>
 <h2>Release History</h2>
 
 <dl>
+<dt>GCC 3.2.3</dt>
+<dd><a name="3.2.3">April 25, 2003</a>
+    (<a href="changes.html#3.2.3">changes</a>)
+</dd>
 <dt>GCC 3.2.2</dt>
 <dd><a name="3.2.2">February 5, 2003</a>
     (<a href="changes.html#3.2.2">changes</a>)
