--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -46,10 +46,10 @@ to maintain and improve quality.</p>
 </dd>
 
 <dt><strong>Current release series:</strong>
-  <a href="gcc-3.2/">GCC 3.2.2</a> (released 2003-02-05)
+  <a href="gcc-3.2/">GCC 3.2.3</a> (released 2003-04-25)
 </dt><dd>
-  GCC 3.2.3 will be the last release from the 3.2.x series.  This
-  branch will be closed after the release.
+  This is the last release from the 3.2.x series.
+  The branch has been closed after the release.
 </dd>
 
 <!--
@@ -87,6 +87,10 @@ The summit takes place May 25-27, 2003 in Ottawa.
 
 <dl>
 
+<dt><b>April 25, 2003</b></dt>
+<dd>
+<a href="gcc-3.2/">GCC 3.2.3</a> has been released.
+</dd>
 
 <dt><b>February 05, 2003</b></dt>
 <dd>
@@ -94,7 +98,6 @@ The summit takes place May 25-27, 2003 in Ottawa.
 </dd>
 
 <dt><b>January 29, 2003</b></dt>
-
 <dd>
 Andrew Haley of Red Hat completed the work begun by Bo Thorsen of SuSE
 to port <a href="java/">GCJ</a> to the AMD x86-64
