--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -121,6 +121,7 @@ particular releases or snapshots or the latest snapshot.  </p>
   <li>gcc_latest_snapshot</li>
   <li>gcc_ss_<i>yyyymmdd</i></li>
   <li>gcc-3_3-branch</li>
+  <li>gcc_3_2_3_release</li>
   <li>gcc_3_2_2_release</li>
   <li>gcc_3_2_1_release</li>
   <li>gcc_3_2_release</li>
