We don't need to update ~ftp/pub/gcc/README any longer.

--- a/htdocs/releasing.html
+++ b/htdocs/releasing.html
@@ -58,8 +58,7 @@ number inserted).</li>
 <li>Add the release tag to the list in <code>cvs.html</code> (the
 branch tag should already be there).</li>
 
-<li>Update <code>~ftp/pub/gcc/README</code> and
-<code>~ftp/pub/gcc/releases/index.html</code>.</li>
+<li>Update <code>~ftp/pub/gcc/releases/index.html</code>.</li>
 
 <li>Upload the release to <code>ftp.gnu.org</code>.</li>
 
