Add entries for 3.2.2:   i586-pc-linux-gnu (Mandrake 8.2, glibc 2.2.4, kernel 2.4.18)   i686-pc-linux-gnu (SCO OpenLinux, kernel 2.4.13)   powerpc-apple-darwin6.5 (2 reports)

--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -302,6 +302,13 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i586-pc-linux-gnu</td>
+<td>Mandrake 8.2, glibc 2.2.4, kernel 2.4.18</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2003-04/msg00966.html">3.2.2</a></td>
+</tr>
+
+<tr>
+<td>i586-pc-linux-gnu</td>
 <td>Mandrake 9.0, kernel 2.4.19</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-11/msg00895.html">3.2.1</a>
@@ -633,8 +640,14 @@ Installing GCC: Final Installation</a>.</p>
 <td>i686-pc-linux-gnu</td>
 <td>Red Hat 8.0, glibc 2.2.93</td>
 <td>Successful (C, C++, F77, Java):
-<a href="http://gcc.gnu.org/ml/gcc/2003-02/msg01131.html">3.2.2</a>,
-</td>
+<a href="http://gcc.gnu.org/ml/gcc/2003-02/msg01131.html">3.2.2</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>SCO OpenLinux, kernel 2.4.13</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2003-04/msg01113.html">3.2.2</a></td>
 </tr>
 
 <tr>
@@ -874,6 +887,20 @@ Installing GCC: Final Installation</a>.</p>
 <td>Mac OS X 10.2.2</td>
 <td>Successful (C only, with patch; detailed instructions):
 <a href="http://gcc.gnu.org/ml/gcc/2003-01/msg00063.html">3.2.1</a></td>
+</tr>
+
+<tr>
+<td>powerpc-apple-darwin6.5</td>
+<td>&nbsp;</td>
+<td>Successful (C):
+<a href="http://gcc.gnu.org/ml/gcc/2003-04/msg00576.html">3.2.2</a></td>
+</tr>
+
+<tr>
+<td>powerpc-apple-darwin6.5</td>
+<td>Mac OS X 10.2.5</td>
+<td>Successful (C, C++, F77, Obj-C, Java):
+<a href="http://gcc.gnu.org/ml/gcc/2003-04/msg00912.html">3.2.2</p></td>
 </tr>
 
 <tr>
