grr, fix typo from previous change

--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -900,7 +900,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>powerpc-apple-darwin6.5</td>
 <td>Mac OS X 10.2.5</td>
 <td>Successful (C, C++, F77, Obj-C, Java):
-<a href="http://gcc.gnu.org/ml/gcc/2003-04/msg00912.html">3.2.2</p></td>
+<a href="http://gcc.gnu.org/ml/gcc/2003-04/msg00912.html">3.2.2</a></td>
 </tr>
 
 <tr>
