Add 3.2.3 entry for sparc-sun-solaris2.8.

--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -1127,7 +1127,8 @@ Installing GCC: Final Installation</a>.</p>
 <a href="http://gcc.gnu.org/ml/gcc/2002-11/msg00950.html">3.2.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2002-11/msg00971.html">3.2.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2003-02/msg00897.html">3.2.2</a>,
-<a href="http://gcc.gnu.org/ml/gcc/2003-02/msg01006.html">3.2.2</a>
+<a href="http://gcc.gnu.org/ml/gcc/2003-02/msg01006.html">3.2.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2003-04/msg01233.html">3.2.3</a>
 </td>
 </tr>
 
