--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -357,6 +357,14 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>i686-pc-cygwin</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-04/msg01564.html">3.2.3</a>
+</td>
+</tr>
+
+<tr>
 <td>i686-pc-cygwin (Athlon)</td>
 <td>Cygwin 1.3.12, Windows 2000 Pro 5.0</td>
 <td>Successful (C, C++):
@@ -405,8 +413,8 @@ Installing GCC: Final Installation</a>.</p>
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-02/msg00567.html">3.2.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-02/msg00355.html">3.2.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-02/msg00345.html">3.2.2</a>,
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-04/msg01529.html">3.2.3</a>,
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-04/msg01553.html">3.2.3</a>
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-04/msg01553.html">3.2.3</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-04/msg01557.html">3.2.3</a>
 </td>
 </tr>
 
@@ -606,7 +614,9 @@ Installing GCC: Final Installation</a>.</p>
 <td>i686-pc-linux-gnu</td>
 <td>Red Hat 7.3, glibc 2.2.5, kernel 2.4.18</td>
 <td>Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2002-12/msg01138.html">3.2</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2002-12/msg01138.html">3.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2003-04/msg01315.html">3.2.3</a>
+</td>
 </tr>
 
 <tr>
@@ -656,6 +666,16 @@ Installing GCC: Final Installation</a>.</p>
 <td>Red Hat 8.0, glibc 2.2.93</td>
 <td>Successful (C, C++, F77, Java):
 <a href="http://gcc.gnu.org/ml/gcc/2003-02/msg01131.html">3.2.2</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>Red Hat 8.0, glibc 2.3.2, binutils 2.13.90.0.2, gnat 3.2</td>
+<td>Successful (C, C++, F77, Java, Obj-C, Ada):
+<a href="http://gcc.gnu.org/ml/gcc/2003-04/msg01299.html">3.2.3</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-04/msg01529.html">3.2.3</a>
+</td>
 </tr>
 
 <tr>
@@ -810,7 +830,8 @@ Installing GCC: Final Installation</a>.</p>
 <td>&nbsp;</td>
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-11/msg00739.html">3.2.1</a>,
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-02/msg00295.html">3.2.2</a>
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-02/msg00295.html">3.2.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-04/msg01556.html">3.2.3</a>
 </td>
 </tr>
 
@@ -819,7 +840,8 @@ Installing GCC: Final Installation</a>.</p>
 <td>&nbsp;</td>
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-11/msg00740.html">3.2.1</a>,
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-02/msg00311.html">3.2.2</a>
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-02/msg00311.html">3.2.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-04/msg01555.html">3.2.3</a>
 </td>
 </tr>
 
@@ -1073,7 +1095,8 @@ Installing GCC: Final Installation</a>.</p>
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00486.html">3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-11/msg00738.html">3.2.1</a>,
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-02/msg00297.html">3.2.2</a>
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-02/msg00297.html">3.2.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-04/msg01566.html">3.2.3</a>
 </td>
 </tr>
 
@@ -1147,9 +1170,11 @@ Installing GCC: Final Installation</a>.</p>
 <td>binutils 2.13.1</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-11/msg01041.html">3.2.1</a>,
-<a href="http://gcc.gnu.org/ml/gcc/2003-02/msg00273.html">3.2.2</a>
+<a href="http://gcc.gnu.org/ml/gcc/2003-02/msg00273.html">3.2.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2003-04/msg01299.html">3.2.3</a>
 <br />Test results:
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-02/msg00336.html">3.2.2</a>
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-02/msg00336.html">3.2.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-04/msg01554.html">3.2.3</a>
 </td>
 </tr>
 
@@ -1213,6 +1238,14 @@ Installing GCC: Final Installation</a>.</p>
 <td>&nbsp;</td>
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-09/msg00570.html">3.2</a>
+</td>
+</tr>
+
+<tr>
+<td>sparc64-sun-solaris2.7</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-04/msg01567.html">3.2.3</a>
 </td>
 </tr>
 
