2003-04-28  Michael Koch  <konqueror@gmx.de>.
	* status.html: Clarified status of java.nio.

--- a/htdocs/java/status.html
+++ b/htdocs/java/status.html
@@ -78,7 +78,7 @@ it isn't very useful.</dd>
 <dt class="package">java.net</dt>
 <dd>Ok.</dd>
 <dt class="package">java.nio</dt>
-<dd>Some code; not working.</dd>
+<dd>The public interface is ready, but the implementation is not working yet.</dd>
 <dt class="package">java.rmi</dt>
 <dd>Ok.</dd>
 <dt class="package">java.security</dt>
