GCC 3.3 obsolete systems list

--- a/htdocs/gcc-3.3/changes.html
+++ b/htdocs/gcc-3.3/changes.html
@@ -290,13 +290,87 @@
   <p>Also, some individual systems have been obsoleted:</p>
 
   <ul>
+    <li>Alpha
+      <ul>
+       <li>Interix, <code>alpha*-*-interix*</code></li>
+       <li>Linux libc1, <code>alpha*-*-linux*libc1*</code></li>
+       <li>Linux ECOFF, <code>alpha*-*-linux*ecoff*</code></li>
+     </ul></li>
+    <li>ARM
+      <ul>
+        <li>Generic a.out, <code>arm*-*-aout*</code></li>
+        <li>Conix, <code>arm*-*-conix*</code></li>
+        <li>"Old ABI," <code>arm*-*-oabi</code></li>
+        <li>StrongARM/COFF, <code>strongarm-*-coff*</code></li>
+      </ul></li>
+    <li>HPPA (PA-RISC)
+      <ul>
+        <li>Generic OSF, <code>hppa1.0-*-osf*</code></li>
+        <li>Generic BSD, <code>hppa1.0-*-bsd*</code></li>
+        <li>HP/UX versions 7, 8, and 9, <code>hppa1.[01]-*-hpux[789]*</code></li>
+        <li>HiUX, <code>hppa*-*-hiux*</code></li>
+        <li>Mach Lites, <code>hppa*-*-lites*</code></li>
+      </ul></li>
+    <li>Intel 386 family
+      <ul>
+        <li>Windows NT 3.x, <code>i?86-*-win32</code></li>
+      </ul></li>
+    <li>MC68000 family
+      <ul>
+        <li>HP systems, <code>m68000-hp-bsd*</code>
+                    and <code>m68k-hp-bsd*</code></li>
+        <li>Sun systems, <code>m68000-sun-sunos*</code>,
+	                 <code>m68k-sun-sunos*</code>,
+                     and <code>m68k-sun-mach*</code></li>
+        <li>AT&amp;T systems, <code>m68000-att-sysv*</code></li>
+        <li>Atari systems, <code>m68k-atari-sysv*</code></li>
+        <li>Motorola systems, <code>m68k-motorola-sysv*</code></li>
+        <li>NCR systems, <code>m68k-ncr-sysv*</code></li>
+        <li>Plexus systems, <code>m68k-plexus-sysv*</code></li>
+        <li>Commodore systems, <code>m68k-cbm-sysv*</code></li>
+        <li>Citicorp TTI, <code>m68k-tti-*</code></li>
+        <li>Unos, <code>m68k-crds-unos*</code></li>
+        <li>Concurrent RTU, <code>m68k-ccur-rtu*</code></li>
+        <li>Linux a.out, <code>m68k-*-linux*aout*</code></li>
+        <li>Linux libc1, <code>m68k-*-linux*libc1*</code></li>
+        <li>pSOS, <code>m68k-*-psos*</code></li>
+      </ul></li>
     <li>MIPS
       <ul>
+        <li>Generic ECOFF, <code>mips*-*-ecoff*</code></li>
 	<li>SINIX, <code>mips-sni-sysv4</code></li>
+	<li>Orion RTEMS, <code>mips64orion-*-rtems*</code></li>
       </ul></li>
     <li>National Semiconductor 32000
       <ul>
 	<li>OpenBSD, <code>ns32k-*-openbsd*</code></li>
+      </ul></li>
+    <li>POWER (aka RS/6000) and PowerPC
+      <ul>
+        <li>AIX versions 1, 2, and 3, <code>rs6000-ibm-aix[123]*</code></li>
+        <li>Bull BOSX, <code>rs6000-bull-bosx</code></li>
+        <li>Generic Mach, <code>rs6000-*-mach*</code></li>
+        <li>Generic SysV, <code>powerpc*-*-sysv*</code></li>
+        <li>Linux libc1, <code>powerpc*-*-linux*libc1*</code></li>
+      </ul></li>
+    <li>Sun SPARC
+      <ul>
+        <li>Generic a.out, <code>sparc-*-aout*</code>,
+	                   <code>sparclet-*-aout*</code>,
+			   <code>sparclite-*-aout*</code>,
+		       and <code>sparc86x-*-aout*</code></li>
+        <li>NetBSD a.out, <code>sparc-*-netbsd*aout*</code></li>
+        <li>Generic BSD, <code>sparc-*-bsd*</code></li>
+        <li>ChorusOS, <code>sparc-*-chorusos*</code></li>
+        <li>Linux a.out, <code>sparc-*-linux*aout*</code></li>
+        <li>Linux libc1, <code>sparc-*-linux*libc1*</code></li>
+        <li>LynxOS, <code>sparc-*-lynxos*</code></li>
+        <li>Solaris on HAL hardware, <code>sparc-hal-solaris2*</code></li>
+        <li>SunOS versions 3 and 4, <code>sparc-*-sunos[34]*</code></li>
+      </ul></li>
+    <li>NEC V850
+      <ul>
+        <li>RTEMS, <code>v850-*-rtems*</code></li>
       </ul></li>
     <li>VAX
       <ul>
