--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -24,6 +24,11 @@
 	It is unlikely that they worked correctly in any 3.x release.</li>
     <li>GCC no longer ships <code>&lt;varargs.h&gt;</code>.  Use
         <code>&lt;stdarg.h&gt;</code> instead.</li>
+    <li>Support for all the systems <a
+        href="../gcc-3.3/changes.html#obsolete_systems">obsoleted in
+        GCC 3.3</a> has been removed from GCC 3.4.  See <a
+        href="#obsolete_systems">below</a> for a list of systems which
+        are obsoleted in this release.</li>
   </ul>
 
 <h2>General Optimizer Improvements</h2>
