New entries for 3.2.3:
  i686-pc-linux-gnu (SuSE 8.1, glibc 2.2.5, kernel 2.4.19)
  powerpc-apple-darwin6.5 (Mac OS X 10.2.5)
  powerpc-unknown-linux-gnu (Debian, glibc 2.2.5, kernel 2.4.1x)

Additional test results for 3.2.3:

  alpha-unknown-linux-gnu
  hppa-unknown-linux-gnu
  i386-pc-linux-gnu
  i686-pc-cygwin
  i686-pc-linux-gnu
  ia64-unknown-linux-gnu
  powerpc-unknown-linux-gnu
  mips-sgi-irix6.5
  s390-ibm-linux-gnu
  sparc-sun-solaris2.9
  sparc-unknown-linux-gnu

--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -44,7 +44,8 @@ Installing GCC: Final Installation</a>.</p>
 <td>&nbsp;</td>
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-09/msg00361.html">3.2</a>,
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-02/msg00351.html">3.2.2</a>
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-02/msg00351.html">3.2.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-04/msg01678.html">3.2.3</a>
 </td>
 </tr>
 
@@ -139,6 +140,14 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>hppa-unknown-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-04/msg01620.html">3.2.3</a>
+</td>
+</tr>
+
+<tr>
 <td>hppa1.1-hp-hpux10.20</td>
 <td>binutils 2.13</td>
 <td>Successful:
@@ -211,6 +220,14 @@ Installing GCC: Final Installation</a>.</p>
 <a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00969.html">3.2</a>
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00527.html">3.2</a>
+</td>
+</tr>
+
+<tr>
+<td>i386-pc-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-04/msg01621.html">3.2.3</a>
 </td>
 </tr>
 
@@ -360,6 +377,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>i686-pc-cygwin</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-04/msg01601.html">3.2.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-04/msg01564.html">3.2.3</a>
 </td>
 </tr>
@@ -414,6 +432,7 @@ Installing GCC: Final Installation</a>.</p>
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-02/msg00355.html">3.2.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-02/msg00345.html">3.2.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-04/msg01553.html">3.2.3</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-04/msg01738.html">3.2.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-04/msg01557.html">3.2.3</a>
 </td>
 </tr>
@@ -762,7 +781,8 @@ Installing GCC: Final Installation</a>.</p>
 <td>SuSE 8.1, glibc 2.2.5, kernel 2.4.19</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2003-02/msg00634.html">3.2.2</a>,
-<a href="http://gcc.gnu.org/ml/gcc/2003-02/msg01793.html">3.2.2</a>
+<a href="http://gcc.gnu.org/ml/gcc/2003-02/msg01793.html">3.2.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2003-04/msg01407.html">3.2.3</a>
 </td>
 </tr>
 
@@ -793,7 +813,8 @@ Installing GCC: Final Installation</a>.</p>
 <td>ia64-unknown-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-02/msg00348.html">3.2.2</a>
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-02/msg00348.html">3.2.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-04/msg01682.html">3.2.3</a>
 </td>
 </tr>
 
@@ -841,6 +862,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-11/msg00740.html">3.2.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-02/msg00311.html">3.2.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-04/msg01611.html">3.2.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-04/msg01555.html">3.2.3</a>
 </td>
 </tr>
@@ -937,7 +959,8 @@ Installing GCC: Final Installation</a>.</p>
 <td>powerpc-apple-darwin6.5</td>
 <td>Mac OS X 10.2.5</td>
 <td>Successful (C, C++, F77, Obj-C, Java):
-<a href="http://gcc.gnu.org/ml/gcc/2003-04/msg00912.html">3.2.2</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2003-04/msg00912.html">3.2.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2003-04/msg01375.html">3.2.3</a></td>
 </tr>
 
 <tr>
@@ -991,17 +1014,20 @@ Installing GCC: Final Installation</a>.</p>
 <td>&nbsp;</td>
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-02/msg00352.html">3.2.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-04/msg01681.html">3.2.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-04/msg01535.html">3.2.3</a>
 </td>
 </tr>
 
 <tr>
 <td>powerpc-unknown-linux-gnu</td>
-<td>Debian Woody, glibc 2.2.5, kernel 2.4.19</td>
+<td>Debian, glibc 2.2.5, kernel 2.4.1x</td>
 <td>Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01307.html">3.2</a>
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01307.html">3.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2003-04/msg01416.html">3.2.3</a>
 <br />Test results:
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00729.html">3.2</a>
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00729.html">3.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-04/msg01735.html">3.2.3</a>
 </td>
 </tr>
 
@@ -1043,7 +1069,8 @@ Installing GCC: Final Installation</a>.</p>
 <td>s390-ibm-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-02/msg00294.html">3.2.2</a>
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-02/msg00294.html">3.2.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-04/msg01680.html">3.2.3</a>
 </td>
 </tr>
 
@@ -1181,6 +1208,14 @@ Installing GCC: Final Installation</a>.</p>
 <tr>
 <td>sparc-sun-solaris2.9</td>
 <td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-04/msg01711.html">3.2.3</a>
+</td>
+</tr>
+
+<tr>
+<td>sparc-sun-solaris2.9</td>
+<td>&nbsp;</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-11/msg01082.html">3.2.1</a></td>
 </tr>
@@ -1197,6 +1232,14 @@ Installing GCC: Final Installation</a>.</p>
 <td>&nbsp;</td>
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00622.html">3.2</a>
+</td>
+</tr>
+
+<tr>
+<td>sparc-unknown-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-04/msg01679.html">3.2.3</a>
 </td>
 </tr>
 
